# cmccm

./: .dockerignore  .gitignore  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
natlife/: db.sqlite3  manage.py
natlife/accounts/: adapters.py  admin.py  forms.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
natlife/accounts/migrations/: 0001_initial.py  0002_pincode.py
natlife/admin_panel/: serializers.py  urls.py  views.py
natlife/applications/: constants.py  models.py  serializers.py  services.py  urls.py  views.py
natlife/applications/migrations/: 0001_initial.py
natlife/core/: apps.py  constants.py  mixins.py  models.py  permissions.py  serializers.py  services.py  signals.py  storage.py  urls.py  validators.py  views.py
natlife/core/migrations/: 0001_initial.py
natlife/natlife/: asgi.py  settings.py  urls.py  wsgi.py
natlife/natlife/config/: auth.py  base.py  local.py  production.py  staging.py
natlife/shg/: apps.py  constants.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
natlife/shg/migrations/: 0001_initial.py  0002_alter_document_file.py  0003_document_is_approved.py
natlife/templates/core/: admin_invite_message.html  admin_invite_subject.txt  invite.html
natlife/trainer/: constants.py  models.py  serializers.py  services.py  urls.py  views.py
natlife/trainer/migrations/: 0001_initial.py
natlife/website/: models.py  serializers.py  urls.py  views.py
natlife/website/migrations/: 0001_initial.py
requirements/: local.txt  production.txt
(+4 files in other folders)
